# kycok

./: .gitignore  Cargo.toml  README.md  warp.yaml
design/: api.md  architecture.md
src/: backend.rs  blobstore.rs  chunker.rs  filestore.rs  lib.rs  main.rs  metastore.rs
src/new_datamodel/: fjall_impl.rs  mem_impl.rs  mod.rs
stresstest/: Cargo.toml
stresstest/src/: driver.rs  generate.rs  generator.rs  main.rs  raw_seaweed.rs  stresstest.rs  workload.rs
