[package]
name = "stresstest"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
bytes = "1.10.1"
bytesize = "2.0.1"
futures = "0.3.31"
futures-util = "0.3.31"
rand = { version = "0.9.1", features = ["small_rng"] }
rand_distr = "0.5.1"
reqwest = { version = "0.12.20", features = ["json", "stream", "multipart"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sketches-ddsketch = "0.3.0"
tokio = { version = "1.45.1", features = [
    "rt",
    "rt-multi-thread",
    "sync",
    "macros",
] }
yansi = "1.0.1"
